@@ -3,3 +3,4 @@ FreeBSD: accf_http(9)
 
 make sure HEAD through proxy works or is rejected.
 
+implement /server-status
