@@ -1,4 +1,5 @@
 0.9:
+  add /server-status
 
 0.8:
   fix pipelining bug
